--- a/react-notes-app/package.json
+++ b/react-notes-app/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "short-lnk",
+  "name": "react-note-app",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
@@ -14,5 +15,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "simpl-schema": "^0.3.2"
+  },
+  "devDependencies": {
+    "expect": "^21.2.0"
   }
 }
