--- a/react-notes-app/package.json
+++ b/react-notes-app/package.json
@@ -10,13 +10,15 @@
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
+    "react": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "simpl-schema": "^0.3.2"
   },
   "devDependencies": {
-    "expect": "^1.20.2"
+    "enzyme": "^2.7.1",
+    "expect": "^1.20.2",
+    "react-addons-test-utils": "^15.6.2"
   }
 }
