--- a/react-notes-app/package.json
+++ b/react-notes-app/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.2",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
