--- a/react-notes-app/package.json
+++ b/react-notes-app/package.json
@@ -18,7 +18,8 @@
     "simpl-schema": "^0.3.2"
   },
   "devDependencies": {
-    "enzyme": "^2.7.1",
+    "enzyme": "^2.9.1",
+    "enzyme-adapter-react-16": "^1.0.1",
     "expect": "^1.20.2",
     "react-addons-test-utils": "^15.6.2"
   }
