--- a/react-notes-app/package.json
+++ b/react-notes-app/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "history": "^4.7.2",
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
