--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
     - node-modules
 before_install:
    - "curl -L http://git.io/3l-rRA | /bin/sh"
+   - export PATH=$HOME/.meteor:$PATH
 install:
   - npm install
 env:
