--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --driver-package=meteortesting:mocha"
+    "test": "TEST_WATCH=1 TEST_BROWSER_DRIVER=chrome meteor test --driver-package=meteortesting:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
@@ -19,9 +19,11 @@
     "simpl-schema": "^0.3.2"
   },
   "devDependencies": {
+    "chromedriver": "^2.37.0",
     "enzyme": "^2.9.1",
     "enzyme-adapter-react-16": "^1.0.1",
     "expect": "^1.20.2",
-    "react-addons-test-utils": "^15.6.2"
+    "react-addons-test-utils": "^15.6.2",
+    "selenium-webdriver": "^3.0.0-beta-2"
   }
 }
